deploy/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sibyl-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: sibyl
    spec:
      containers:
        - name: sibyl-server
          image: stencila/sibyl-server
          ports:
            - containerPort: 3000
        - name: sibyl-docker
          image: docker:dind
          securityContext:
            privileged: true
          ports:
            - containerPort: 2375
