deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sibyl-service
spec:
  type: NodePort
  selector:
    app: sibyl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
