deploy/gke.yaml
# A Google Container Engine (GKE) deployment

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sibyl-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sibyl
    spec:

      volumes:
        - name: sibyl-nginx-configmap
          configMap:
            name: nginx-sse
        - name: sibyl-gcloud-key-file
          secret:
            secretName: gcloud-key-file
            defaultMode: 256

      containers:
          
        # Nginx web server
        - name: sibyl-nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sibyl-nginx-configmap
              mountPath: /etc/nginx/conf.d/
              
        # Sibyl app server
        - name: sibyl-server
          image: stencila/sibyl-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sibyl-gcloud-key-file
              mountPath: /mnt/secrets

        # Docker-in-Docker (dind) to build bundle images
        - name: sibyl-docker
          image: docker:dind
          securityContext:
            privileged: true
          ports:
            - containerPort: 2375

---

# Rebuild images every day at midnight UTC
# 
# This would ideally be a CronJob but they are currently
# unsupported on GKE (except in "alpha" culsters). 
# See https://github.com/kubernetes/kubernetes.github.io/issues/2325#issuecomment-275763247
# 
# So we use a Deployment with a `cron` job running inside
# our `sibyl-builder` container

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: sibyl-builder
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sibyl-builder
    spec:
      volumes:

        - name: sibyl-docker-password
          secret:
            secretName: docker-password
            defaultMode: 256

      containers:

        # Sibyl base image builder
        - name: sibyl-builder
          image: stencila/sibyl-builder
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sibyl-docker-password
              mountPath: /mnt/secrets

        # Docker-in-Docker (dind) to build base images
        - name: sibyl-docker
          image: docker:dind
          securityContext:
            privileged: true
          ports:
            - containerPort: 2375

---

# Expose the Sibyl server

kind: Service
apiVersion: v1
metadata:
  name: sibyl-service
spec:
  type: NodePort
  selector:
    app: sibyl
  ports:
    - name: http
      protocol: TCP
      port: 80

---

# Provide a cluster ingress

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sibyl-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sibyl
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: sibyl-service
            servicePort: 80
