deploy/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sibyl-ingress
spec:
  backend:
    serviceName: sibyl-service
    servicePort: 80
